--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -107,6 +107,14 @@ form {
     transform: rotate(-20deg);
 }
 
+.blur1 {
+    position: absolute;
+    top: -100%;
+    right: -30%;
+    transform: rotate(95deg);
+    z-index: -1;
+}
+
 .go-up {
     position: absolute;
     right: 100px;
@@ -134,6 +142,10 @@ form {
             font-size: 60px;
         }
     }
+
+    .blur1 {
+        right: -45%;
+    }
 }
 
 @media (max-width: 970px) {
@@ -156,6 +168,12 @@ form {
 
     .contact-headline {
         margin-bottom: 32px;
+    }
+
+    .blur1 {
+        height: 500px;
+        right: -20%;
+        top: -40%;
     }
 }
 
@@ -183,6 +201,18 @@ form {
     .go-up {
         right: 50px;
     }
+
+    .blur5 {
+        height: 300px;
+        left: 0%;
+        bottom: -25%;
+    }
+
+    .blur1 {
+        height: 300px;
+        right: -20%;
+        top: -40%;
+    }
 }
 
 @media (max-width: 600px) {
@@ -201,6 +231,10 @@ form {
 
     .contact-line {
         width: 10px;
+    }
+
+    .blur1 {
+        right: -15%;
     }
 }
 
