--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,6 @@ body {
     height: 100vh;
     max-width: 100%;
     scroll-behavior: smooth;
-    overflow-x: hidden;
 }
 
 .red {
